--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,6 @@
+*{
+    margin:0;
+}
 #body {
     font-family: 'Open Sans', sans-serif;
     margin: 0;
@@ -38,7 +41,6 @@
 }
 
 #home {
-    width: 100%;
     height: 100vh;
     margin: 0;
     padding: 0;
@@ -68,12 +70,8 @@
     margin: 0;
     padding-left: 10%;
     padding-right: 10%;
-    text-align: justify;
+    text-align: left;
     color: white;
-}
-#projtitle{
-    padding-top:3vh;
-    text-align: center;
 }
 
 #about a {
@@ -124,8 +122,9 @@
     
 }
 #Project1 img{
-    width:100%;
     height:auto;
+    width:100%;
+    padding-left:10%;
 }
 #Project1 a{
     color:white;
@@ -152,8 +151,8 @@
     
 }
 #Project2 img{
-    width:100%;
     height:auto;
+    width:100%;
     padding-right: 10%;
 }
 #Project2 a{
@@ -182,8 +181,8 @@
     
 }
 #Project3 img{
-    width:100%;
     height:auto;
+    width:100%;
     padding-left:10%;
 }
 #Project3 a{
@@ -210,8 +209,8 @@
     
 }
 #Project4 img{
-    width:100%;
     height:auto;
+    width:100%;
     padding-right: 10%;
 }
 #Project4 a{
@@ -239,8 +238,8 @@
     
 }
 #Project5 img{
-    width:100%;
     height:auto;
+    width:100%;
     padding-left:10%;
 }
 #Project5 a{
@@ -249,6 +248,34 @@
 }
 #Project5 a:hover{
     color:#3BB483;
+}
+
+#Project6 {
+    background-color:#B4D0E7;
+    color:#003366;
+    padding-left:7%;
+}
+
+#Project6 h2{
+    font-size:5vh;
+}
+#Project6 p{
+    padding-top:4vh;
+    font-size:2.5vh;
+    padding-right:10%;
+    
+}
+#Project6 img{
+    height:auto;
+    width:100%;
+    
+}
+#Project6 a{
+    color:#003366;
+    text-decoration: none;
+}
+#Project6 a:hover{
+    color:#34495e;
 }
 
 #contact{
@@ -286,4 +313,8 @@
 }
 #footer a:hover{
     color:#3BB483;
+}
+#h2tagcontact{
+    margin-right:0;
+    padding-right:0;
 }
