--- a/styles.css
+++ b/styles.css
@@ -190,9 +190,10 @@
     color: #bdc3c7;
 }
 
-@media only screen and (max-width: 1250px) {
+@media only screen and (max-width: 1350px) {
     #Project {
-        height: 50vh;
+        min-height: 50vh;
+        height:auto;
         text-align: center;
     }
     #Project h2{
@@ -242,7 +243,7 @@
     background-color: #2c3e50;
 }
 
-@media only screen and (max-width: 1250px) {
+@media only screen and (max-width: 1350px) {
     #contactitem {
         padding-left: 3%;
         padding-right: 3%;
